[package]
name = "emulations"
version = "0.1.0"
edition = "2021"

[lib]
name = "emulations"
path = "lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# `emulations` is optional to be only compiled with feature `emulation`
# (needed to exclude emulations completely when compiling workspace with feature `runtime-benchmarks`: trying to compile e.g. statemint-runtime over the dependency branch
# rooted here results in failures since there is no runtime-benchmark flag propagated (rightly so), but common dependency between emulations and acurast runtime/node still receive the
# runtime-benchmark flag.
payments-emulation = { path = "payments-emulation", optional = true }

[features]
default = ["emulation"]
emulation = [
    "payments-emulation/std",
]
