[package]
name = "emulations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crates.io
serde = { version = "1.0.188" }
parity-scale-codec = { workspace = true }
proc-macro2 = "1.0.40"
scale-info = { version = "2.1.2", features = ["derive"] }
rand = "0.8.5"
hex-literal = { workspace = true }

# Acurast
acurast-reputation = { workspace = true }

# Runtimes
acurast-rococo-runtime = { workspace = true }

# Substrate
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-message-queue = { workspace = true }
pallet-uniques = { workspace = true }
parachains-common = { workspace = true }
parachain-info = { workspace = true }

# Emulator
polkadot-primitives = { workspace = true }
polkadot-parachain = { workspace = true }
polkadot-core-primitives = { workspace = true }
polkadot-runtime-parachains  = { workspace = true }
xcm = { workspace = true }
xcm-executor = { workspace = true }
xcm-builder = { workspace = true }
xcm-simulator = { workspace = true }
pallet-xcm = { workspace = true }

[features]
default = ["std"]
std = [
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-message-queue/std",
	"pallet-uniques/std",
	"pallet-xcm/std",
	"acurast-reputation/std",
]
