[package]
name = "acurast-node"
authors = { workspace = true }
description = "Acurast Node"
version = { workspace = true }
license = "Unlicense"
homepage = "https://docs.acurast.com/"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
log = { workspace = true }
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.188", features = ["derive"] }
jsonrpsee = { version = "0.16.2", features = ["server"] }
async-trait = { workspace = true }
cfg-if = { workspace = true }
futures = { workspace = true }

# RPC
pallet-acurast-marketplace = { workspace = true }

# Local
acurast-runtime-common = { workspace = true }
acurast-rococo-runtime = { workspace = true }
acurast-kusama-runtime = { workspace = true }
pallet-acurast-hyperdrive-outgoing = { workspace = true }

# Nimbus
nimbus-consensus = { workspace = true }
nimbus-primitives = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, features = [
	"std",
] }
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-client-db = { workspace = true }
sc-consensus = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-rpc = { workspace = true }
sc-service = { workspace = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-keystore = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-timestamp = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-consensus = { workspace = true }
sp-inherents = { workspace = true }
sp-storage = { workspace = true, features = [ "std" ] }
sc-offchain = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }
try-runtime-cli = { workspace = true, optional = true }

# Polkadot
polkadot-cli = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-service = { workspace = true }
xcm = { workspace = true }

# Cumulus
cumulus-client-cli = { workspace = true }
cumulus-client-consensus-aura = { workspace = true }
cumulus-client-consensus-common = { workspace = true }
cumulus-client-network = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-relay-chain-inprocess-interface = { workspace = true }
cumulus-relay-chain-interface = { workspace = true }
cumulus-relay-chain-rpc-interface = { workspace = true }
cumulus-relay-chain-minimal-node = { workspace = true }

[dev-dependencies]
hex = "0.4"

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }

[features]
default = ["acurast-local", "acurast-dev", "acurast-rococo"]

proof-of-stake = []
proof-of-authority = []

acurast-local = ["proof-of-stake"]
acurast-dev = ["proof-of-stake"]
acurast-rococo = ["proof-of-stake"]
acurast-kusama = ["proof-of-authority"]

runtime-benchmarks = [
	"try-runtime-cli/try-runtime",
	"acurast-rococo-runtime/runtime-benchmarks",
	"acurast-kusama-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = [
	"try-runtime-cli/try-runtime",
	"acurast-rococo-runtime/try-runtime"
]
