[package]
name = "acurast-node"
authors = { workspace = true }
description = "Acurast Node"
version = { workspace = true }
license = "Unlicense"
homepage = "https://docs.acurast.com/"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
clap-num = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonrpsee = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# RPC
pallet-acurast-marketplace = { workspace = true, features = ["std"] }

# Local
acurast-runtime-common = { workspace = true, features = ["std"] }
acurast-rococo-runtime = { workspace = true, features = ["std"] }
acurast-kusama-runtime = { workspace = true, features = ["std"] }
acurast-mainnet-runtime = { workspace = true, features = ["std"] }

# Substrate
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, features = [
	"std",
] }
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-client-db = { workspace = true }
sc-consensus = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-rpc = { workspace = true }
sc-service = { workspace = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-keystore = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-timestamp = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-consensus = { workspace = true }
sp-inherents = { workspace = true }
sp-storage = { workspace = true, features = ["std"] }
sc-offchain = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }
try-runtime-cli = { workspace = true, optional = true }

# Polkadot
polkadot-cli = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-service = { workspace = true }
xcm = { workspace = true }

# Cumulus
cumulus-client-collator = { workspace = true }
cumulus-client-cli = { workspace = true }
cumulus-client-consensus-aura = { workspace = true }
cumulus-client-consensus-common = { workspace = true }
cumulus-client-consensus-proposer = { workspace = true }
cumulus-client-network = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-relay-chain-inprocess-interface = { workspace = true }
cumulus-relay-chain-interface = { workspace = true }
cumulus-relay-chain-rpc-interface = { workspace = true }
cumulus-relay-chain-minimal-node = { workspace = true }

color-print = "0.3.4"

[dev-dependencies]
hex = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.6.0" }

[features]
default = ["acurast-local", "acurast-dev", "acurast-rococo"]

acurast-local = []
acurast-dev = []
acurast-rococo = []
acurast-kusama = []
acurast-mainnet = []

runtime-benchmarks = [
	"try-runtime-cli/try-runtime",
	"acurast-rococo-runtime/runtime-benchmarks",
	"acurast-kusama-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = [
	"try-runtime-cli/try-runtime",
	"acurast-rococo-runtime/try-runtime",
]
