[package]
name = "acurast-p256-crypto"
license = "MIT"
authors = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
substrate-bip39 = { version = "0.6.0", optional = true }
tiny-bip39 = { version = "1.0.0", optional = true }
serde = { version = "1.0.188", optional = true, features = ["derive"] }
hex = { version = "0.4", default-features = false }
base64 = { version = "0.21.7", default-features = false, features = ["alloc"] }

p256 = { git = "https://github.com/Acurast/elliptic-curves", default-features = false, features = ["ecdsa", "sha256"] }

# Substrate
sp-io = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-application-crypto = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-runtime-interface/std",
	"sp-application-crypto/std",
	"sp-io/std",
	"sp-core/std",
	"parity-scale-codec/std",
	"scale-info/std",
    "serde",
	"p256/std",
	"hex/std",
	"base64/std",
	"substrate-bip39",
	"tiny-bip39",
]
